// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-item-counts-legacy #render should render as expected (1) 1`] = `
<gux-pagination-item-counts-legacy current-page="0" items-per-page="0" total-items="0">
  <div class="gux-pagination-item-counts-container">
    <span class="gux-pagination-item-counts-range">
      0 - 0
    </span>
    <span>
      of 0
    </span>
  </div>
</gux-pagination-item-counts-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (2) 1`] = `
<gux-pagination-item-counts-legacy current-page="2" items-per-page="25" total-items="99">
  <div class="gux-pagination-item-counts-container">
    <span class="gux-pagination-item-counts-range">
      26 - 50
    </span>
    <span>
      of 99
    </span>
  </div>
</gux-pagination-item-counts-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (3) 1`] = `
<gux-pagination-item-counts-legacy current-page="2" items-per-page="50" total-items="99">
  <div class="gux-pagination-item-counts-container">
    <span class="gux-pagination-item-counts-range">
      51 - 99
    </span>
    <span>
      of 99
    </span>
  </div>
</gux-pagination-item-counts-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (4) 1`] = `
<gux-pagination-item-counts-legacy current-page="1" items-per-page="100" total-items="99">
  <div class="gux-pagination-item-counts-container">
    <span class="gux-pagination-item-counts-range">
      1 - 99
    </span>
    <span>
      of 99
    </span>
  </div>
</gux-pagination-item-counts-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (5) 1`] = `
<gux-pagination-item-counts-legacy current-page="2" items-per-page="25" total-items="0">
  <div class="gux-pagination-item-counts-container">
    <span class="gux-pagination-item-counts-range">
      0 - 0
    </span>
    <span>
      of 0
    </span>
  </div>
</gux-pagination-item-counts-legacy>
`;

exports[`gux-pagination-item-counts-legacy #render should render as expected (6) 1`] = `
<gux-pagination-item-counts-legacy current-page="2" items-per-page="25" total-items="10">
  <div class="gux-pagination-item-counts-container">
    <span class="gux-pagination-item-counts-range">
      26 - 10
    </span>
    <span>
      of 10
    </span>
  </div>
</gux-pagination-item-counts-legacy>
`;
